force-app/main/default/objects/NI_User_History__c/NI_User_History__c.object-meta.xml
<CustomObject>
    <description>Custom Object used to track changes to the standard User records in Salesforce by custom Visualforce Pages and controllers designed by Newmarket&apos;s IT Department.</description>
    <label>NI User History</label>
    <nameField>
        <displayFormat>UH-{00000}</displayFormat>
        <label>User History Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>NI User History</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>