force-app/main/default/objects/NI_User_History__c/fields/Changed_From__c.field-meta.xml
<CustomField>
    <fullName>Changed_From__c</fullName>
    <description>Original value of the field</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Original value of the field</inlineHelpText>
    <label>Changed From</label>
    <length>120</length>
    <type>Text</type>
</CustomField>