force-app/main/default/objects/NI_User_History__c/fields/Changed_To__c.field-meta.xml
<CustomField>
    <fullName>Changed_To__c</fullName>
    <description>New value of the field that was changed</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>New value of the field that was changed</inlineHelpText>
    <label>Changed To</label>
    <length>120</length>
    <type>Text</type>
</CustomField>