force-app/main/default/objects/NI_User_History__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Additional information for the change</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Additional information for the change</inlineHelpText>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>