force-app/main/default/objects/NI_User_History__c/fields/Field_Name__c.field-meta.xml
<CustomField>
    <fullName>Field_Name__c</fullName>
    <description>Name of the field that was changed</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Name of the field that was changed</inlineHelpText>
    <label>Field Name</label>
    <length>60</length>
    <required>true</required>
    <type>Text</type>
</CustomField>