force-app/main/default/objects/NI_User_History__c/listViews/ADP_Number_Changes_ALL.listView-meta.xml
<ListView>
    <fullName>ADP_Number_Changes_ALL</fullName>
    <columns>NAME</columns>
    <columns>User__c</columns>
    <columns>Field_Name__c</columns>
    <columns>Changed_From__c</columns>
    <columns>Changed_To__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Field_Name__c</field>
        <operation>equals</operation>
        <value>ADP Record Number</value>
    </filters>
    <label>ADP Number Changes - ALL</label>
    <sharedTo>
        <group>Internal_IT</group>
        <group>NISFDCSysAdmin</group>
        <role>Finance</role>
    </sharedTo>
</ListView>